# pyao-server

./: .coveragerc  .env.example  .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  .run_tests.sh.swp  ANALISIS_PROYECTO.md  ARCHITECTURE.md  AUDITORIA.md  CONTRIBUTING.md  Claude.md  ESTADO_ACTUAL.md  MIGRATION_MAP.md  README.md  REDIS_INTEGRATION.md  REFACTOR_REPOSITORIES.md  REVISION_TODOS_DOCS.md  TODO.md  TODO_ARQUITECTURA.md  TODO_CLIENTE.md  coverage.json  docker-compose.yml  pyproject.toml  run-redis.sh  run_tests.sh  test_tree_detection.py  test_work_flow.py
.github/: dependabot.yml
archives/: map_data.xz
config/: server.toml
data/: README.md  classes.toml  crafting_materials.toml  hechizos.toml  items.toml  loot_tables.toml  map_blocked_tiles.toml  map_npcs.toml  map_transitions.toml  merchant_inventories.toml  npcs.toml  npcs_amigables.toml  npcs_complete.toml.bak  npcs_hostiles.toml  npcs_hostiles_extended.toml  npcs_traders_extended.toml  objetos.toml  spells.toml  test_npcs.toml
docs/: ACCOUNT_CREATION.md  ANALISIS_CLIENTE_VB6_2026.md  ARCHITECTURAL_IMPROVEMENTS_EXPLAINED.md  ARCHITECTURE.md  ARCHITECTURE_PROJECT.md  ARMOR_SETS.md  BANK_SYSTEM.md  BUGFIX_TILE_OCCUPATION.md  CHARACTERISTICS_MISSING_FROM_VB6.md  CHARACTER_MOVEMENT.md  CLAN_BUTTON.md  CLAN_BUTTON_ENABLING.md  CLAN_SYSTEM.md  CLAN_SYSTEM_IMPLEMENTATION_STATUS.md  CLASS_SYSTEM_VERIFICATION.md  CLAUDE.md  CLI.md  COMBAT_DAMAGE_MESSAGES.md  COMBAT_SYSTEM.md  COMMAND_PATTERN_ANALYSIS.md  COMMERCE_SYSTEM.md  COMMERCE_SYSTEM_COMPLETED.md  CONFIGURATION.md  CONFIGURATION_IMPROVEMENTS.md  CONTRIBUTING.md  COVERAGE_ANALYSIS.md  ESTADO_ACTUAL.md  GAME_TICK_SYSTEM.md  HANDLER_REFACTORING.md  HANDLER_REFACTORING_COMPLETED.md  HANDLER_REFACTORING_PENDING.md  HOW_TO_ENABLE_CLAN_BUTTON.md  ITEMS_SYSTEM.md  LOGGING_FEATURES.md  LOGIN_FLOW.md  LOOT_SYSTEM.md  MAGIC_SYSTEM.md  MAP_BINARY_FORMAT_VB6.md  MAP_FORMAT_VB6.md  MAP_ORPHANS_ANALYSIS.md  (+41 more)
map_data/: 005_map.json  016_resources.json  017_map.json  020_resources.json  021_map.json  034_resources.json  038_resources.json  044_map.json  056_map.json  057_map.json  060_map.json  069_resources.json  070_resources.json  076_map.json  078_map.json  079_map.json  080_map.json  081_map.json  084_resources.json  086_map.json  088_map.json  094_resources.json  100_resources.json  103_map.json  104_map.json  107_map.json  112_map.json  114_resources.json  115_map.json  124_map.json  126_resources.json  128_map.json  130_map.json  138_map.json  146_map.json  153_map.json  154_map.json  165_map.json  166_map.json  167_map.json  (+128 more)
maps/: 102.json  105.json  108.json  109.json  12.json  134.json  137.json  139.json  159.json  162.json  168.json  169.json  170.json  172.json  178.json  179.json  18.json  185.json  186.json  20.json  204.json  208.json  221.json  235.json  237.json  246.json  249.json  252.json  278.json  283.json  285.json  286.json  290.json  3.json  45.json  46.json  53.json  7.json  8.json  87.json  (+152 more)
redis/: Dockerfile  README.md
resources/: 10.json  104.json  110.json  112.json  113.json  135.json  145.json  15.json  150.json  151.json  157.json  161.json  163.json  164.json  169.json  17.json  170.json  171.json  185.json  186.json  188.json  189.json  19.json  197.json  198.json  206.json  207.json  217.json  218.json  219.json  241.json  247.json  248.json  25.json  250.json  259.json  27.json  273.json  274.json  282.json  (+19 more)
scripts/: __init__.py  analyze_map_grh.py  analyze_redundant_tests.py  check_class_skills.py  convert_maps.py  extract_blocked_tiles.py  extract_map_sizes.py  find_real_redundant_tests.py  fix_toml_format.py  format_json.sh  generate_map_files.py  init_merchant_inventory.py  parse_ao_maps.py  parse_map_resources.py  regenerate_npcs_toml.py  reorganize_messaging.py  reorganize_models.py  reorganize_remaining.py  reorganize_remaining_tests.py  reorganize_repositories.py  reorganize_services.py  reorganize_tasks.py  reorganize_tests.py  show_metrics.py  show_metrics_example.py  show_spell_info_snippet.py  split_items_toml.py  sync_merchant_inventories.py  update_messaging_imports.py  update_model_imports.py  update_remaining_imports.py  update_repository_imports.py  update_service_imports.py  update_test_imports.py
snap/: snapcraft.yaml
src/: __init__.py  _version.py  account_repository.py  authentication_service.py  bank_repository.py  base_data_loader.py  client_connection.py  combat_damage_calculator.py  combat_reward_calculator.py  combat_service.py  combat_validator.py  combat_weapon_service.py  commerce_service.py  config.py  data_initializer.py  dependency_container.py  effect_gold_decay.py  effect_hunger_thirst.py  effect_npc_movement.py  effect_stamina_regen.py  equipment_service.py  game_tick.py  game_tick_initializer.py  inventory_repository.py  inventory_stacking_strategy.py  inventory_storage.py  item_catalog.py  item_constants.py  item_types.py  items_catalog.py  logging_config.py  map_manager.py  map_manager_spatial.py  map_resources_service.py  map_transition_service.py  meditation_effect.py  merchant_data_loader.py  merchant_repository.py  message_audio_sender.py  message_character_sender.py  (+95 more)
tests/: conftest.py  test_account_creation.py  test_account_repository.py  test_authentication_service.py  test_balance_service.py  test_bank_repository.py  test_broadcast_movement.py  test_client_connection.py  test_combat_damage_calculator.py  test_combat_reward_calculator.py  test_combat_service.py  (+120 more)
(+937 files in other folders)
